--- a/instituicao-estrutura.html
+++ b/instituicao-estrutura.html
@@ -14,7 +14,7 @@
   <!-- TOPBAR -->
   <header class="topbar">
     <div class="topbar__left">
-      <div class="logo" aria-hidden="true"></div>
+      <img src="imagem_uma.png" alt="Logo da Universidade da Madeira"/>
       <div class="topbar__title">
         <strong>InfoAlunos</strong> - Serviço de Informação dos Alunos - <strong>v3.1.4</strong>
       </div>
@@ -28,94 +28,93 @@
 
   <!-- LAYOUT -->
   <div class="layout">
-    <!-- SIDEBAR -->
-    <aside class="sidebar" aria-label="Menu lateral">
-      <nav class="menu">
-        <a class="menu__item" href="#">Início</a>
+    <aside class="sidebar" aria-label="Menu principal">
+      <nav class="menu" aria-label="Navegação principal">
+        <a class="menu__item " href="menu-inicial.html">Início</a>
 
         <div class="menu__group">
-          <a class="menu__item" href="#">Geral <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Geral">
-            <a class="menu__flyitem" href="#">Processos</a>
-            <a class="menu__flyitem" href="#">Dados Pessoais</a>
-            <a class="menu__flyitem" href="#">Privacidade</a>
-            <a class="menu__flyitem" href="#">Ajuda</a>
+          <a class="menu__item " href="#" aria-haspopup="true">Geral <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__flyitem" href="geral-processos.html">Processos</a>
+            <a class="menu__flyitem" href="geral-dadospessoais.html">Dados Pessoais</a>
+            <a class="menu__flyitem" href="geral-privacidade.html">Privacidade</a>
+            <a class="menu__flyitem" href="geral-ajuda.html">Ajuda</a>
           </div>
         </div>
 
         <div class="menu__group">
-          <a class="menu__item" href="#">Serviços <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Serviços">
-            <a class="menu__flyitem" href="#">Pagamentos</a>
-            <a class="menu__flyitem" href="#">Matrículas</a>
-            <a class="menu__flyitem" href="#">Inscrições</a>
-            <a class="menu__flyitem" href="#">Requerimentos</a>
-            <a class="menu__flyitem" href="#">Cartão</a>
+          <a class="menu__item " href="#" aria-haspopup="true">Serviços <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__flyitem" href="servicos-pagamentos.html">Pagamentos</a>
+            <a class="menu__flyitem" href="servicos-matriculas.html">Matrículas</a>
+            <a class="menu__flyitem" href="servicos-incriscoes.html">Inscrição em Turmas</a>
+            <a class="menu__flyitem" href="servicos-requerimentos.html">Requerimentos</a>
+            <a class="menu__flyitem" href="servicos-cartao.html">Cartão Universitário</a>
+          </div>
+        </div>
+
+        <a class="menu__item " href="concursos-candidaturas.html">Concursos</a>
+
+        <div class="menu__group">
+          <a class="menu__item " href="#" aria-haspopup="true">Avaliação <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__flyitem" href="avaliacao-pautas.html">Pautas</a>
+            <a class="menu__flyitem" href="avaliacao-reclamacao.html">Reclamação de Notas</a>
+            <a class="menu__flyitem" href="avaliacao-inquerito.html">Inquéritos</a>
+            <a class="menu__flyitem" href="avaliacao-resultado-inquerito.html">Resultado de Inquéritos</a>
+            <a class="menu__flyitem" href="avaliacao-inquerito-raides.html">Inquérito RAIDES</a>
           </div>
         </div>
 
         <div class="menu__group">
-          <a class="menu__item" href="#">Concursos <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Concursos">
-            <a class="menu__flyitem" href="#">Candidaturas</a>
+          <a class="menu__item " href="#" aria-haspopup="true">Creditações <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__flyitem" href="creditacoes-lista.html">Lista Processos</a>
+            <a class="menu__flyitem" href="creditacoes-novo.html">Novo Processo</a>
           </div>
         </div>
-
         <div class="menu__group">
-          <a class="menu__item" href="#">Avaliação <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Avaliação">
-            <a class="menu__flyitem" href="#">Pautas</a>
-            <a class="menu__flyitem" href="#">Reclamação</a>
-            <a class="menu__flyitem" href="#">Inquérito</a>
-            <a class="menu__flyitem" href="#">Resultado Inquérito</a>
+            <a class="menu__item " href="#" aria-haspopup="true">Documentos<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="documentos-academicos.html">Académicos</a>
+            <a class="menu__item " href="documentos-declaracoes.html">Declarações</a>
           </div>
         </div>
-
         <div class="menu__group">
-          <a class="menu__item" href="#">Creditações <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Creditações">
-            <a class="menu__flyitem" href="#">Lista</a>
-            <a class="menu__flyitem" href="#">Novo</a>
+            <a class="menu__item " href="#" aria-haspopup="true">Aula<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="aula-presenca.html">Marcar Presença</a>
+            <a class="menu__item " href="aula-calendario.html">Calendário</a>
+            <a class="menu__item " href="aula-sumarios.html">Sumários</a>
           </div>
         </div>
-
         <div class="menu__group">
-          <a class="menu__item" href="#">Documentos <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Documentos">
-            <a class="menu__flyitem" href="#">Académicos</a>
-            <a class="menu__flyitem" href="#">Declarações</a>
+            <a class="menu__item " href="#" aria-haspopup="true">Disciplina<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="disciplina-ficha.html">Ficha</a>
+            <a class="menu__item " href="disciplina-ficheiros.html">Ficheiros</a>
           </div>
         </div>
-
         <div class="menu__group">
-          <a class="menu__item" href="#">Aula <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Aula">
-            <a class="menu__flyitem" href="#">Presença</a>
-            <a class="menu__flyitem" href="#">Calendário</a>
-            <a class="menu__flyitem" href="#">Sumários</a>
+            <a class="menu__item " href="#" aria-haspopup="true">Curso<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="curso-ficha.html">Ficha Curricular</a>
+            <a class="menu__item " href="curso-horarios.html">Horários</a>
+            <a class="menu__item " href="curso-historico-matriculas.html">Histórico de Matrículas</a>
+            <a class="menu__item " href="curso-historico-disciplinas.html">Histórico de Disciplinas Aprovadas</a>
+            <a class="menu__item " href="curso-transicao.html">Transição para a Bolonha</a>
+            <a class="menu__item " href="curso-plano.html">Plano de Conclusão</a>
+            <a class="menu__item " href="curso-quadro.html">Quadro de Prescrição</a>
+            <a class="menu__item " href="curso-atividades.html">Atividades Académicas do Aluno</a>
           </div>
         </div>
-
         <div class="menu__group">
-          <a class="menu__item" href="#">Disciplina <span class="chev">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Disciplina">
-            <a class="menu__flyitem" href="#">Fichas</a>
-            <a class="menu__flyitem" href="#">Ficheiros</a>
+            <a class="menu__item " href="#" aria-haspopup="true">Instituição<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="instituicao-estrutura.html">Estrutura Orgânica</a>
           </div>
         </div>
-
-        <a class="menu__item" href="#">Curso</a>
-
-        <div class="menu__group">
-          <a class="menu__item is-active" href="#">
-            Instituição <span class="chev">›</span>
-          </a>
-          <div class="menu__flyout" role="menu" aria-label="Instituição">
-            <a class="menu__flyitem" href="#">Estrutura</a>
-          </div>
-        </div>
-
-        <a class="menu__item" href="#">Eleições</a>
+        <a class="menu__item " href="eleicoes.html">Eleições</a>
       </nav>
     </aside>
 
