--- a/servicos-matriculas.html
+++ b/servicos-matriculas.html
@@ -14,7 +14,7 @@
   <!-- TOPO AZUL -->
   <header class="topbar">
     <div class="topbar__left">
-      <div class="logo" aria-hidden="true"></div>
+      <img src="imagem_uma.png" alt="Logo da Universidade da Madeira"/>
       <div class="topbar__title">
         <strong>InfoAlunos</strong> - Serviço de Informação dos Alunos - <strong>v3.1.4</strong>
       </div>
@@ -27,57 +27,93 @@
   </header>
 
   <div class="layout">
-    <!-- SIDEBAR -->
     <aside class="sidebar" aria-label="Menu principal">
       <nav class="menu" aria-label="Navegação principal">
-        <a class="menu__item" href="index.html">Início</a>
+        <a class="menu__item " href="menu-inicial.html">Início</a>
 
         <div class="menu__group">
-          <a class="menu__item" href="#" aria-haspopup="true">Geral <span class="chev" aria-hidden="true">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Submenu Geral">
+          <a class="menu__item " href="#" aria-haspopup="true">Geral <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
             <a class="menu__flyitem" href="geral-processos.html">Processos</a>
-            <a class="menu__flyitem" href="geral-dados-pessoais.html">Dados Pessoais</a>
+            <a class="menu__flyitem" href="geral-dadospessoais.html">Dados Pessoais</a>
             <a class="menu__flyitem" href="geral-privacidade.html">Privacidade</a>
             <a class="menu__flyitem" href="geral-ajuda.html">Ajuda</a>
           </div>
         </div>
 
-        <!-- Serviços ativo -->
         <div class="menu__group">
-          <a class="menu__item is-active" href="#" aria-haspopup="true">Serviços <span class="chev" aria-hidden="true">›</span></a>
-          <div class="menu__flyout" role="menu" aria-label="Submenu Serviços">
-            <a class="menu__flyitem" href="servicos-pagamentos.html">Pagamentos</a>
-            <a class="menu__flyitem is-subactive" href="servicos-matriculas.html">Matrículas</a>
-            <a class="menu__flyitem" href="#">Inscrição em Turmas</a>
-            <a class="menu__flyitem" href="#">Requerimentos</a>
-            <a class="menu__flyitem" href="#">Cartão Universitário</a>
-            <a class="menu__flyitem" href="#">SASUMa - Bolsas</a>
-          </div>
-        </div>
-
-        <div class="menu__group">
-          <a class="menu__item" href="#" aria-haspopup="true">Concursos <span class="chev" aria-hidden="true">›</span></a>
-          <div class="menu__flyout"><a class="menu__flyitem" href="#">Candidaturas</a></div>
-        </div>
-
-        <div class="menu__group">
-          <a class="menu__item" href="#" aria-haspopup="true">Avaliação <span class="chev" aria-hidden="true">›</span></a>
+          <a class="menu__item " href="#" aria-haspopup="true">Serviços <span class="chev" aria-hidden="true">›</span></a>
           <div class="menu__flyout">
-            <a class="menu__flyitem" href="#">Pautas</a>
-            <a class="menu__flyitem" href="#">Reclamação de Notas</a>
-            <a class="menu__flyitem" href="#">Inquéritos</a>
-            <a class="menu__flyitem" href="#">Resultado de Inquéritos</a>
-            <a class="menu__flyitem" href="#">Inquérito RAIDES</a>
+            <a class="menu__flyitem" href="servicos-pagamentos.html">Pagamentos</a>
+            <a class="menu__flyitem" href="servicos-matriculas.html">Matrículas</a>
+            <a class="menu__flyitem" href="servicos-incriscoes.html">Inscrição em Turmas</a>
+            <a class="menu__flyitem" href="servicos-requerimentos.html">Requerimentos</a>
+            <a class="menu__flyitem" href="servicos-cartao.html">Cartão Universitário</a>
           </div>
         </div>
 
-        <a class="menu__item" href="#">Creditações</a>
-        <a class="menu__item" href="#">Documentos</a>
-        <a class="menu__item" href="#">Aula</a>
-        <a class="menu__item" href="#">Disciplina</a>
-        <a class="menu__item" href="#">Curso</a>
-        <a class="menu__item" href="#">Instituição</a>
-        <a class="menu__item" href="#">Eleições</a>
+        <a class="menu__item " href="concursos-candidaturas.html">Concursos</a>
+
+        <div class="menu__group">
+          <a class="menu__item " href="#" aria-haspopup="true">Avaliação <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__flyitem" href="avaliacao-pautas.html">Pautas</a>
+            <a class="menu__flyitem" href="avaliacao-reclamacao.html">Reclamação de Notas</a>
+            <a class="menu__flyitem" href="avaliacao-inquerito.html">Inquéritos</a>
+            <a class="menu__flyitem" href="avaliacao-resultado-inquerito.html">Resultado de Inquéritos</a>
+            <a class="menu__flyitem" href="avaliacao-inquerito-raides.html">Inquérito RAIDES</a>
+          </div>
+        </div>
+
+        <div class="menu__group">
+          <a class="menu__item " href="#" aria-haspopup="true">Creditações <span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__flyitem" href="creditacoes-lista.html">Lista Processos</a>
+            <a class="menu__flyitem" href="creditacoes-novo.html">Novo Processo</a>
+          </div>
+        </div>
+        <div class="menu__group">
+            <a class="menu__item " href="#" aria-haspopup="true">Documentos<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="documentos-academicos.html">Académicos</a>
+            <a class="menu__item " href="documentos-declaracoes.html">Declarações</a>
+          </div>
+        </div>
+        <div class="menu__group">
+            <a class="menu__item " href="#" aria-haspopup="true">Aula<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="aula-presenca.html">Marcar Presença</a>
+            <a class="menu__item " href="aula-calendario.html">Calendário</a>
+            <a class="menu__item " href="aula-sumarios.html">Sumários</a>
+          </div>
+        </div>
+        <div class="menu__group">
+            <a class="menu__item " href="#" aria-haspopup="true">Disciplina<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="disciplina-ficha.html">Ficha</a>
+            <a class="menu__item " href="disciplina-ficheiros.html">Ficheiros</a>
+          </div>
+        </div>
+        <div class="menu__group">
+            <a class="menu__item " href="#" aria-haspopup="true">Curso<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="curso-ficha.html">Ficha Curricular</a>
+            <a class="menu__item " href="curso-horarios.html">Horários</a>
+            <a class="menu__item " href="curso-historico-matriculas.html">Histórico de Matrículas</a>
+            <a class="menu__item " href="curso-historico-disciplinas.html">Histórico de Disciplinas Aprovadas</a>
+            <a class="menu__item " href="curso-transicao.html">Transição para a Bolonha</a>
+            <a class="menu__item " href="curso-plano.html">Plano de Conclusão</a>
+            <a class="menu__item " href="curso-quadro.html">Quadro de Prescrição</a>
+            <a class="menu__item " href="curso-atividades.html">Atividades Académicas do Aluno</a>
+          </div>
+        </div>
+        <div class="menu__group">
+            <a class="menu__item " href="#" aria-haspopup="true">Instituição<span class="chev" aria-hidden="true">›</span></a>
+          <div class="menu__flyout">
+            <a class="menu__item " href="instituicao-estrutura.html">Estrutura Orgânica</a>
+          </div>
+        </div>
+        <a class="menu__item " href="eleicoes.html">Eleições</a>
       </nav>
     </aside>
 
